# Recursive-Parallel-Programming

./: .gitignore  CMakeLists.txt  README.md  matrix_generator.py  run_bench.sh
include/: common.hpp
resources/: a1000x100.txt  a100x10.txt  a100x100.txt  b100x100.txt  b100x1000.txt  b10x100.txt  test.txt
src/: openmp.cpp  openmpi.cpp  sequntial.cpp  ublas.cpp
